[gd_scene format=3 uid="uid://dbw4sxh2w2xh6"]

[ext_resource type="Script" uid="uid://dtuw6vmnmss4i" path="res://Scripts/OptionsMenu.gd" id="1_ayvsw"]
[ext_resource type="Texture2D" uid="uid://cnedufk3xjqmb" path="res://Assets/Dialogue/BookMenu.png" id="2_s3xhb"]
[ext_resource type="StyleBox" uid="uid://cfg4t3f3c1ai5" path="res://Assets/buttonFocusedStyleBox.tres" id="3_un4xt"]
[ext_resource type="Texture2D" uid="uid://dcee2tfk4h45f" path="res://Assets/Controls.png" id="4_s3xhb"]

[node name="PauseMenu" type="Control" unique_id=1073303519]
process_mode = 3
z_index = 99
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ayvsw")

[node name="Background" type="ColorRect" parent="." unique_id=1202986295]
layout_mode = 1
anchors_preset = -1
offset_left = -41.0
offset_top = -17.0
offset_right = 1951.0
offset_bottom = 1105.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.35006404, 0.35006392, 0.35006377, 1)

[node name="BookBase" type="TextureRect" parent="." unique_id=982632053]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_s3xhb")

[node name="RestartConfirmDialogue" type="ConfirmationDialog" parent="." unique_id=135239692]
oversampling_override = 1.0
title = "Are you sure?"
initial_position = 1
size = Vector2i(280, 132)
ok_button_text = "yes"
dialog_text = "This will reset your current run, but will preserve any endings you've successfully found."
dialog_autowrap = true
cancel_button_text = "wait no"

[node name="DeleteAllConfirmDialogue" type="ConfirmationDialog" parent="." unique_id=803379069]
oversampling_override = 1.0
title = "Are you sure?"
initial_position = 1
size = Vector2i(280, 158)
ok_button_text = "yes"
dialog_text = "This will delete not only your current save, but all endings progress you've made!
"
dialog_autowrap = true
cancel_button_text = "wait no"

[node name="LeftPage" type="ColorRect" parent="." unique_id=1610651927]
layout_mode = 0
offset_left = 277.0
offset_top = 97.0
offset_right = 932.0
offset_bottom = 911.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.43137255, 1, 1, 0)

[node name="MarginContainer" type="MarginContainer" parent="LeftPage" unique_id=1461017470]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="LeftPage/MarginContainer" unique_id=1992265427]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="LeftPage/MarginContainer/HBoxContainer" unique_id=1166067634]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TitleLabel" type="Label" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1588700566]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Options"
horizontal_alignment = 1

[node name="MasterLabel" type="Label" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1295471355]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Master Volume"
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1454250653]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1392751576]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1903801137]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=2060576206]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Sound FX Volume"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1694790786]
layout_mode = 2

[node name="Control" type="Control" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=845228870]
layout_mode = 2
size_flags_vertical = 3

[node name="SaveData2" type="Label" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=979398486]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Window Type"
horizontal_alignment = 1

[node name="WindowType" type="OptionButton" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=150795909]
layout_mode = 2
item_count = 2
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="Control3" type="Control" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=382402453]
layout_mode = 2
size_flags_vertical = 3

[node name="SaveData" type="Label" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1404005253]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Save Data"
horizontal_alignment = 1

[node name="ExportSave" type="Button" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=73537279]
layout_mode = 2
theme_override_styles/focus = ExtResource("3_un4xt")
text = "Export Save Data"

[node name="ExportSave2" type="Button" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=524807687]
layout_mode = 2
theme_override_styles/focus = ExtResource("3_un4xt")
text = "Import Save Data"

[node name="Control4" type="Control" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=855194140]
layout_mode = 2
size_flags_vertical = 3

[node name="ResetData" type="Label" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=704118829]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Reset Data"
horizontal_alignment = 1

[node name="RestartRun" type="Button" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1088424170]
layout_mode = 2
theme_override_styles/focus = ExtResource("3_un4xt")
text = "Restart Current Run"

[node name="DeleteAllData" type="Button" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=1906893950]
layout_mode = 2
theme_override_styles/focus = ExtResource("3_un4xt")
text = "Delete All Data"

[node name="Control2" type="Control" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=212466750]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="LeftPage/MarginContainer/HBoxContainer/VBoxContainer" unique_id=871554500]
layout_mode = 2
theme_override_styles/focus = ExtResource("3_un4xt")
text = "Back"

[node name="FadeBack" type="ColorRect" parent="." unique_id=341500037]
visible = false
layout_mode = 1
anchors_preset = -1
offset_left = -82.0
offset_top = -34.0
offset_right = 1910.0
offset_bottom = 1088.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6862745)

[node name="RightPage" type="ColorRect" parent="." unique_id=995532869]
layout_mode = 0
offset_left = 1002.0
offset_top = 97.0
offset_right = 1657.0
offset_bottom = 911.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.43137255, 1, 1, 0)

[node name="MarginContainer" type="MarginContainer" parent="RightPage" unique_id=140672403]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="RightPage/MarginContainer" unique_id=64167928]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="RightPage/MarginContainer/VBoxContainer" unique_id=268623707]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Controls"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="RightPage/MarginContainer/VBoxContainer" unique_id=571179507]
layout_mode = 2
texture = ExtResource("4_s3xhb")
expand_mode = 4
stretch_mode = 5

[node name="Control" type="Control" parent="RightPage" unique_id=261430736]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleLabel" type="Label" parent="RightPage/Control" unique_id=506810613]
layout_mode = 0
offset_left = 87.0
offset_top = 175.0
offset_right = 332.0
offset_bottom = 217.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Up"
horizontal_alignment = 2

[node name="TitleLabel2" type="Label" parent="RightPage/Control" unique_id=854405010]
layout_mode = 0
offset_left = 96.0
offset_top = 243.0
offset_right = 341.0
offset_bottom = 285.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Down"
horizontal_alignment = 2

[node name="TitleLabel3" type="Label" parent="RightPage/Control" unique_id=1948747476]
layout_mode = 0
offset_left = 93.0
offset_top = 309.0
offset_right = 338.0
offset_bottom = 351.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Left"
horizontal_alignment = 2

[node name="TitleLabel4" type="Label" parent="RightPage/Control" unique_id=1535831562]
layout_mode = 0
offset_left = 96.0
offset_top = 377.0
offset_right = 341.0
offset_bottom = 419.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Right"
horizontal_alignment = 2

[node name="TitleLabel5" type="Label" parent="RightPage/Control" unique_id=923192208]
layout_mode = 0
offset_left = 112.0
offset_top = 493.0
offset_right = 357.0
offset_bottom = 535.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Interact"
horizontal_alignment = 2

[node name="TitleLabel6" type="Label" parent="RightPage/Control" unique_id=1126665958]
layout_mode = 0
offset_left = 110.0
offset_top = 593.0
offset_right = 355.0
offset_bottom = 680.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Pause/In-Game Item Access"
horizontal_alignment = 2
autowrap_mode = 3

[connection signal="canceled" from="RestartConfirmDialogue" to="." method="_close_confirm_stuff"]
[connection signal="confirmed" from="RestartConfirmDialogue" to="." method="_on_restart_confirm_dialogue_confirmed"]
[connection signal="canceled" from="DeleteAllConfirmDialogue" to="." method="_close_confirm_stuff"]
[connection signal="confirmed" from="DeleteAllConfirmDialogue" to="." method="_on_delete_all_confirm_dialogue_confirmed"]
[connection signal="value_changed" from="LeftPage/MarginContainer/HBoxContainer/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="LeftPage/MarginContainer/HBoxContainer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="LeftPage/MarginContainer/HBoxContainer/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="item_selected" from="LeftPage/MarginContainer/HBoxContainer/VBoxContainer/WindowType" to="." method="_on_window_type_item_selected"]
[connection signal="pressed" from="LeftPage/MarginContainer/HBoxContainer/VBoxContainer/ExportSave" to="." method="_on_export_save_pressed"]
[connection signal="pressed" from="LeftPage/MarginContainer/HBoxContainer/VBoxContainer/RestartRun" to="." method="_on_restart_run_pressed"]
[connection signal="pressed" from="LeftPage/MarginContainer/HBoxContainer/VBoxContainer/DeleteAllData" to="." method="_on_delete_all_data_pressed"]
[connection signal="pressed" from="LeftPage/MarginContainer/HBoxContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
